final copy of milestone 4

--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -58,7 +58,7 @@
 									<label for="logpassword">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="logpassword" id="logpassword"  class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
+									<input type="password" name="logpassword" id="logpassword"  required>
 								</td>
 							</tr>
 							<tr>
