fixed links in lis

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -41,12 +41,12 @@
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div class="sideList">
 				<ul>
-					<a id="one" href="#"><li>Longsword</li></a>
-					<a id="two" href="#"><li>Rapier</li></a>
-					<a id="three" href="#"><li>Sidesword</li></a>
-					<a id="six" href="#"><li>Messer</li></a>
-					<a id="four" href="#"><li>Hand to Hand</li></a>
-					<a id="five" href="#"><li>Other</li></a>
+					<li><a id="one" href="#">Longsword</a>
+					<li><a id="two" href="#">Rapier</a>
+					<li><a id="three" href="#">Sidesword</a>
+					<li><a id="six" href="#">Messer</a>
+					<li><a id="four" href="#">Hand to Hand</a>
+					<li><a id="five" href="#">Other</a>
 				</ul>
 			</div>
 			<div id="default" class="styleDescriptions">
