--- a/G2/hema/abouthema/abouthema.html
+++ b/G2/hema/abouthema/abouthema.html
@@ -42,9 +42,9 @@
 
 			<div class="sideList">
 				<ul>
-					<a id="one" href="#"><li>HEMA History</li></a>
-					<a id="two" href="#"><li>Why do HEMA?</li></a>
-					<a id="three" href="#"><li>Getting Involved</li></a>
+					<li><a id="one" href="#">HEMA History</a>
+					<li><a id="two" href="#">Why do HEMA?</a>
+					<li><a id="three" href="#">Getting Involved</a>
 				</ul>
 			</div>
 			<div id="default" class="aboutContent">
