final commit for milestone 4

--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -68,7 +68,7 @@
 				<h4>Historically</h4>
 				<p>Rapiers are one handed weapons inteneded primarily for thrusting. They have long narrow blades (usually even longer than a longsword), and more complex hand protection than most other swords. Although they were taken into battle as sidearms, they were truely duelling weapons which were speciallized for one on one combat.
 				<h4>Today</h4>
-				<p>Widely recognized as the weapon of the Three Musketeers and Zorro, the modern recreation of historical rapier draws in a large portion of the HEMA community. It also has the benefit of requiring minimal safety equipment (just gloves and a mask) and being relatively unlikely to injure seriously, which makes it popular with people who don't like the risks associated with heavier weapons such as longswords. Most schools of rapier teach based on the documents written by the Italian masters Ridolfo Capo Ferro, and Salvator Fabris.
+				<p>The weapon of Three Musketeers and Zorro, but the modern recreation of historical rapier draws in a large portion of the HEMA community. It also has the benefit of requiring minimal safety equipment and being relatively unlikely to injure seriously, which makes it popular with people who don't like the risks associated with heavier weapons such as longswords. Most schools of rapier teach based on the documents written by the Italian masters Ridolfo Capo Ferro, and Salvator Fabris.
             </div>
 
             <div id="sidesword" class="hidden">
@@ -96,14 +96,14 @@
                 <h1>Other</h1>
                 <p>Some of the other popular weapons in modern HEMA include:
                 <ul>
-                	<li>Great Sword - extremly long double edged straight sword with a simple cross guard and double length handle
-                	<li>Arming Sword - single hand double edged straight sword with a simple cross guard
-                	<li>Sabre - single hand single edged curved or straight sword with an enclosed hand guard or knuckle bow
-                	<li>Dussack - single hand single edged curved short sword with a knuckle bow
-                	<li>Polearm - a variety of weapons which are a long pole with some type of blade or hammer at the end
-                	<li>Quarter Staff - a long wooden pole 
-                	<li>Singlestick - short wooden sticks, sometimes with leather hand protection
-                	<li>Dagger - small knife intended primarily for thrusting as oppsed to cutting
+                	<li>Great Sword - extremly long double edged straight sword with a simple cross guard and double length handle</li>
+                	<li>Arming Sword - single hand double edged straight sword with a simple cross guard</li>
+                	<li>Sabre - single hand single edged curved or straight sword with an enclosed hand guard or knuckle bow</li>
+                	<li>Dussack - single hand single edged curved short sword with a knuckle bow</li>
+                	<li>Polearm - a variety of weapons which are a long pole with some type of blade or hammer at the end</li>
+                	<li>Quarter Staff - a long wooden pole</li>
+                	<li>Singlestick - short wooden sticks, sometimes with leather hand protection</li>
+                	<li>Dagger - small knife intended primarily for thrusting as oppsed to cutting</li>
                 	
                 </ul>
             </div>
