--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Login/Signup</title>
-	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     
 	<link rel="stylesheet" href="../style/base.css">	
@@ -100,7 +101,7 @@
 									<label for="regpassword">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="regpassword" id="regpassword" class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
+									<input type="password" name="regpassword" id="regpassword" class="tooltipwidget" title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
@@ -108,7 +109,7 @@
 									<label for="confpassword">Confirm password:</label>
 								</td>
 								<td>
-									<input type="password" name="confpassword" id="confpassword" class="masterTooltip" title="Min 8 characters,at least 1 capital, 1 number, alphanumeric and !@#%^&*_ symbols are allowed." required>
+									<input type="password" name="confpassword" id="confpassword" class="tooltipwidget" title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
