--- a/G2/hema/abouthema/abouthema.html
+++ b/G2/hema/abouthema/abouthema.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>About HEMA</title>
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script type="text/javascript" src="aboutlist.js"></script>
+    <script type="text/javascript" src="abouthema.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Cinzel" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Titillium+Web" rel="stylesheet">
 	<link rel="stylesheet" href="../../style/base.css">
