--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -4,7 +4,11 @@
 	<meta charset="utf-8">
 	<title>Login/Signup</title>
 	<link href="https://fonts.googleapis.com/css?family=Cinzel|Titillium+Web" rel="stylesheet">
-	<link rel="stylesheet" href="../style/base.css">	
+	<link rel="stylesheet" href="../style/base.css">
+
+	<link rel="stylesheet" href="../jquery-ui-1.12.1/jquery-ui.min.css">
+	<script src="../jquery-ui-1.12.1/external/jquery/jquery.js"></script>
+	<script src="../jquery-ui-1.12.1/jquery-ui.min.js"></script>
 </head>
 <body>
 	<header>
@@ -36,7 +40,7 @@
 		<div id="wrapper">
 			<div id="loginpanel">
 				<div class="loginform">
-					<form method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form method="post" action="login.php">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -45,18 +49,18 @@
 							</tr>
 							<tr>
 								<td>
-									<label for="logemail">Email address:</label>
+									<label for="login_id">Login:</label>
 								</td>
 								<td>
-									<input type="email" name="logemail" id="logemail" required>
+									<input type="text" name="login_id" id="login_id" required>
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<label for="logpassword">Password:</label>
+									<label for="login_password">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="logpassword" id="logpassword" required>
+									<input type="password" name="login_password" id="login_password" required>
 								</td>
 							</tr>
 							<tr>
@@ -70,7 +74,7 @@
 			</div>
 			<div id="registerpanel">
 				<div class="loginform">
-					<form onsubmit="return checkRegistration()" method="post" action="http://webdevfoundations.net/scripts/formdemo.asp">
+					<form onsubmit="return checkRegistration()" method="post" action="register.php">
 						<table>
 							<tr>
 								<td class="logintitle" colspan="2">
@@ -79,20 +83,30 @@
 							</tr>
 							<tr>
 								<td>
-									<label for="regemail">Email address:</label>
+									<label for="register_id">Login</label>
 								</td>
 								<td>
-									<input type="email" name="regemail" id="regemail" required>
+									<input type="text" name="register_id" id="register_id" required>
+								</td>
+							</tr>
+
+
+							<tr>
+								<td>
+									<label for="register_fname">First name:</label>
+								</td>
+								<td>
+									<input type="text" name="register_fname" id="register_fname" required>
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<label for="confemail">Confirm email:</label>
+									<label for="register_lname">Last Name:</label>
 								</td>
 								<td>
-									<input type="text" name="confemail" id="confemail" required>
+									<input type="text" name="register_lname" id="register_lname" required>
 								</td>
-							</tr>							
+							</tr>
 							<tr>
 								<td>
 									<label for="regpassword">Password:</label>
@@ -107,6 +121,11 @@
 								</td>
 								<td>
 									<input type="password" name="confpassword" id="confpassword" required>
+								</td>
+							</tr>
+							<tr>
+								<td id="passwordReqs" colspan="2">
+									Password must be at least 8 characters long and contain a capital and numeral.
 								</td>
 							</tr>
 							<tr>
