updated ids in registration form

--- a/G2/login/loginorsignup.html
+++ b/G2/login/loginorsignup.html
@@ -59,11 +59,7 @@
 									<label for="login_password">Password:</label>
 								</td>
 								<td>
-<<<<<<< HEAD
 									<input type="password" name="login_password" id="login_password" required>
-=======
-									<input type="password" name="logpassword" id="logpassword"  required>
->>>>>>> 889a5400e0a91129c7c65bd9283461b7edd5bb71
 								</td>
 							</tr>
 							<tr>
@@ -112,18 +108,27 @@
 							</tr>
 							<tr>
 								<td>
-									<label for="regpassword">Password:</label>
+									<label 
+									for="register_password">Password:</label>
 								</td>
 								<td>
-									<input type="password" name="regpassword" id="regpassword" class="tooltipwidget" title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
+									<input type="password" 
+									name="register_password" 
+									id="register_password" 
+									class="tooltipwidget" title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
 								<td>
-									<label for="confpassword">Confirm password:</label>
+									<label for="register_cpassword">Confirm 
+									password:</label>
 								</td>
 								<td>
-									<input type="password" name="confpassword" id="confpassword" class="tooltipwidget" title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
+									<input type="password" 
+									name="register_cpassword" 
+									id="register_cpassword" 
+									class="tooltipwidget" 
+									title="Min 8 characters, at least 1 capital, 1 number and only !@#%^&*_ symbols are allowed." required>
 								</td>
 							</tr>
 							<tr>
