--- a/G2/hema/hemainbc/hemainbc.html
+++ b/G2/hema/hemainbc/hemainbc.html
@@ -39,7 +39,10 @@
 			<img id="bannerimg" src = "../../content/fenestraBanner.png" alt = "Two longsword fencers locked in a high bind.">
 			<div id="hemainbcText">
 				<h1>Hema in BC</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p>The BC lower mainland is home to some of the highest regarded HEMA schools in the world, and has ond of the largest populations of HEMA practioners in the world. With multiple reputable schools run by highly skilled instructors, it is hard to think of a better place for somebody interested in HEMA to find themselves. 
+				<p><a href="http://academieduello.com">Academie Duello</a> &mdash; located in the heart of Downtown Vancouver &mdash; is the world's largest centre for swordplay with over 1000 registered members. With daily classes, weekly workshops, an arms and armour shop and a museum; it's a must visit for anybody interested in historical martial arts and weapons.
+				<p><a href="http://www.bloodandiron.ca">Blood And Iron</a> is multi-chapter school with locations in Burnaby and Victoria. They are well known in the international HEMA community for producing high intensity and highly successful tournament fighters.
+				<P><a href="http://boxwrestlefence.com/valkyriewmaa">Valkyrie WMAA</a> in Vancouver is new in the HEMA scene, having opened in 2015. Valkyrire is Canada's first martial arts school to be owned and operated by women; and they put heavy emphasis on wanted to ensure that their school is welcoming place for students of all backgrounds.
 			</div>
 			<iframe id="maps-embed" width="600" height="450" src="https://www.google.com/maps/embed/v1/search?key=AIzaSyD8ETPBw8qiG5hG89BIxOebzQGffU3u53A&q=hema+vancouver&zoom=10" allowfullscreen></iframe>
 			</div>
