--- a/G2/hema/hemastyles/hemastyles.html
+++ b/G2/hema/hemastyles/hemastyles.html
@@ -74,6 +74,10 @@
 				<p>Longswords are weapons which were meant to be used in two hands and featured a simple cross guard and a straight, double edged blade. They are effective for both cutting and thrusting, and were commonly used both in and out of armour; on the battlefield as a soldiers secondary weapon, or in a duel as a weapon of honour.
 				<h4>Today</h4>
 				<p>Within the modern HEMA community Longsword is by far the most popular weapons to learn to fight with and it had the most/largest tournaments of all the fighting disciplines. Practitioners have the option of learning from two separate lineages, German (the more popular in tournaments) and Italian (which focused more on 'the duel'). Most German based schools focus on the teachings of the Jochim Meyer, while the Italian based schools typically teach from Fiore dei Liberi's treatise 'The Flower of Battle'.
+				</p>
+				<div id="bottomPic">
+				<img src = "../../content/longsword.png">
+				</div>
 			</div>
 
             <div id="rapier" class="hidden">
@@ -120,7 +124,7 @@
                 </ul>
                 </div>
 				<div id = "pic">
-					<img src = "../../content/sabre.jpg" alt = "A steel Hutton style sabre and matching scabbard." width = "250" height = "175">
+					<img src = "../../content/sabre2.jpg" alt = "A steel Hutton style sabre and matching scabbard." width = "260" height = "195">
 				</div>
 
             </div>
